--- a/Frontend/public/views/index.html
+++ b/Frontend/public/views/index.html
@@ -272,7 +272,10 @@
                 <label><input type="checkbox" id="toggleView">Toggle Body Visibility</label>
               </div>
               <div id="Zoom" class="context-menu-option">
-                    <label><input type="checkbox" id="zoomToBody" name="zoomTB" value="Zoom to Body" style="display: none;">Zoom To Body</label>
+                    <label><input type="checkbox" id="zoomToBody" name="zoomTB" value="Zoom to Body" style="display: none;">Zoom to Body</label>
+                </div>
+                <div id="info" class="context-menu-option">
+                	<label><input type="checkbox" id="infoButton" name="infobtn" value="Body info" style="display: none;">Body Info</label>
                 </div>
             </div>
         </div>
@@ -343,8 +346,11 @@
                     <button type="button" class="btn cancel" onclick="closeForm2()">Close</button>
                 </div>
             </form>
-
             </div>
+
+            <div class="info_panel" id="info_panel1">
+            </div>
+
         </div>
 
        <!--  <div id="comparison1">
