Manually merged my branch with Frontend branch. Added a rudimentary window for body info.

--- a/Frontend/public/views/index.css
+++ b/Frontend/public/views/index.css
@@ -586,11 +586,24 @@ button {
 
 #error-console {
   position: absolute;
-  color: #060606;
   bottom: 10px;
-  right: 0px;
+  right: 10px;
   width: 160px;
   height: 110px;
-  overflow: scroll;
-  /*opacity: 0.7;*/
+  /* overflow: scroll; */
+  opacity: 0.7;
+  overflow-x: hidden;
+  overflow-y: auto;
+  right: 10px;
+}
+
+.info_panel {
+  width: 177px;
+  height: 200px;
+  position: fixed;
+  background-color: lightgray;
+  top: calc(50% - 100px);
+  right: 0;
+  border-radius: 10px;
+  text-align: center;
 }
