--- a/Frontend/public/views/index.html
+++ b/Frontend/public/views/index.html
@@ -147,6 +147,9 @@
               <div id="Zoom" class="context-menu-option">
                     <label><input type="checkbox" id="zoomToBody" name="zoomTB" value="Zoom to Body" style="display: none;">Zoom To Body</label>
                 </div>
+                <div id="info" class="context-menu-option">
+                	<label><input type="checkbox" id="infoButton" name="infobtn" value="Body info" style="display: none;">Body Info</label>
+                </div>
             </div>
         </div>
 
@@ -216,8 +219,8 @@
                     <button type="button" class="btn cancel" onclick="closeForm2()">Close</button>
                 </div>
             </form>
-
-            </div>
+        </div>
+        <div class="info_panel" id="info_panel1"></div>
         </div>
         <button id="kernel" onclick="openForm3()">Upload New SPK Kernel</button>
                 <form class="form" id="myForm" enctype="multipart/form-data">Choose the file: <input type="file" name="file"/><BR>
