--- a/Frontend/public/views/index.html
+++ b/Frontend/public/views/index.html
@@ -220,7 +220,7 @@
                 </div>
             </form>
         </div>
-        <div class="info_panel" id="info_panel1"></div>
+        <div class="info_panel" id="info_panel1" style="display:none"></div>
         </div>
         <button id="kernel" onclick="openForm3()">Upload New SPK Kernel</button>
                 <form class="form" id="myForm" enctype="multipart/form-data">Choose the file: <input type="file" name="file"/><BR>
