--- a/Frontend/public/views/index.html
+++ b/Frontend/public/views/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" style= "width: 100%; height: 100%; background-color:black;">
+<html lang="en" style= "width: 100%; height: 100%; background-color:black; overflow-y: hidden; overflow-x: hidden">
     <head>
         <!-- Use correct character set. -->
         <meta charset="utf-8">
