--- a/Frontend/public/views/index.html
+++ b/Frontend/public/views/index.html
@@ -8,12 +8,12 @@
         <!-- Make the app on mobile take up the full browser screen and disable user scaling. -->
         <meta name="viewport"
             content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
+        
         <title>Solar System</title>
 
 		<script src="https://typpo.github.io/spacekit/build/spacekit.js"></script>
 
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
-
          <script>
             function openForm() {
               document.getElementById("form-container1").style.display = "block";
@@ -127,7 +127,7 @@
 	                <input type="text" id="input_length" placeholder="JD" >
 	                <button type="button" id="input_length_set">Set</button>
 	              </form>
-	              <a><button type="button" class="playbtn" id="start-button">Start</button></a>
+	              <a><button type="button" class="playbtn" id="start-button">Start/Stop</button></a>
 
 	              <form class="btn_group" action="javascipt:void(0)">
 	                 <button type="button" class="action_btn reset" onclick="openForm()">Reset</button>
