--- a/Frontend/public/views/index.html
+++ b/Frontend/public/views/index.html
@@ -134,6 +134,9 @@
 	                 <button type="button" class="action_btn compare" onclick="openForm2()">Compare</button>
 	              </form>
 	            </div>
+	            <div class="pretty_button_holder">
+	            	<button type="button" id="pretty_button">Pretty Mode</button>
+	            </div>
 	        </div>
     <!--Context Menu (Hidden by default)-->
     		<form class="form" id="myForm" enctype="multipart/form-data">SPK File Upload:
