Fixed texture issue, added favicon, removed dependecy on old endpoints

--- a/Frontend/public/views/index.html
+++ b/Frontend/public/views/index.html
@@ -9,7 +9,11 @@
         <meta name="viewport"
             content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
         
-        <title>Solar System</title>
+
+            <link rel="shortcut icon" type="image/png" href="assets/favicon-96x96.png"/>
+
+
+        <title>Aether</title>
 
 		<script src="https://typpo.github.io/spacekit/build/spacekit.js"></script>
 
