--- a/Frontend/public/views/welcome.html
+++ b/Frontend/public/views/welcome.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Welcome</title>
         <link rel="stylesheet" type="text/css" href="/views/style/welcome.css">
+        <link rel="shortcut icon" type="image/png" href="assets/favicon-96x96.png"/>
     </head>
     <body>
         <div class="welcome-section content-hidden">
