--- a/Frontend/public/views/index.html
+++ b/Frontend/public/views/index.html
@@ -140,6 +140,7 @@
 	            </div>
 	            <div class="pretty_button_holder">
 	            	<button type="button" id="pretty_button">Pretty Mode</button>
+	            	<button type="button" id="grid_button">Toggle Grid</button>
 	            </div>
 	        </div>
     <!--Context Menu (Hidden by default)-->
