--- a/Frontend/public/views/index.html
+++ b/Frontend/public/views/index.html
@@ -15,7 +15,7 @@
 
         <title>Aether</title>
 
-		<script src="https://typpo.github.io/spacekit/build/spacekit.js"></script>
+		<script src="/spacekit/build/spacekit.js"></script>
 
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
          <script>
@@ -187,7 +187,7 @@
             <input type="text" placeholder="i.e. sun+earth+moon" name="targets" required>
 
             <label for="jd_start" style="color: black">Starting Date</label>
-            <input type="text" placeholder="i.e. 01 Jan 12:00:00 UTC" name="jd_start" required>
+            <input type="text" placeholder="i.e. 01 Jan 2000 12:00:00 UTC" name="jd_start" required>
 
             <button type="submit" class="btn" onclick="closeForm()">Create</button>
             <button type="button" class="btn cancel" onclick="closeForm()">Close</button>
@@ -207,7 +207,7 @@
                     <input type="text" placeholder="i.e. sun+earth+moon" name="targets" required>
 
                     <label for="jd_start" style="color: black">Starting Date</label>
-                    <input type="text" placeholder="i.e. 01 Jan 12:00:00 UTC" name="jd_start" required>
+                    <input type="text" placeholder="i.e. 01 Jan 2000 12:00:00 UTC" name="jd_start" required>
 
                 </div>
                 <div class="column">
@@ -219,7 +219,7 @@
                     <input type="text" placeholder="i.e. sun+earth+moon" name="targets2" required>
 
                     <label for="jd_start2" style="color: black">Starting Date</label>
-                    <input type="text" placeholder="i.e. 01 Jan 12:00:00 UTC" name="jd_start2" required>
+                    <input type="text" placeholder="i.e. 01 Jan 2000 12:00:00 UTC" name="jd_start2" required>
 
                     <button type="submit" class="btn" onclick="closeForm2()">Create</button>
                     <button type="button" class="btn cancel" onclick="closeForm2()">Close</button>
