Fixed rotations, compare sim, added loading screen

--- a/Frontend/public/views/index.html
+++ b/Frontend/public/views/index.html
@@ -136,11 +136,10 @@
 	              <form class="btn_group" action="javascipt:void(0)">
 	                 <button type="button" class="action_btn reset" onclick="openForm()">Reset</button>
 	                 <button type="button" class="action_btn compare" onclick="openForm2()">Compare</button>
+                     
 	              </form>
-	            </div>
-	            <div class="pretty_button_holder">
-	            	<button type="button" id="pretty_button">Pretty Mode</button>
-	            	<button type="button" id="grid_button">Toggle Grid</button>
+                  <button type="button" id="pretty_button" style="height: 40px" class="action_btn">Pretty Mode</button>
+                 <button type="button" id="grid_button" style="height: 40px" class="action_btn">Toggle Grid</button>
 	            </div>
 	        </div>
     <!--Context Menu (Hidden by default)-->
