Changed time controls to simulation controls

--- a/Frontend/public/views/index.html
+++ b/Frontend/public/views/index.html
@@ -123,7 +123,7 @@
 	              <div id="content1" class="content1"></div>
 	                <button id="kernel" onclick="openForm3()">Upload New SPK Kernel</button>
 	            </div>
-	            <button class="Ropenbtn" id="Ropenbtn" onclick="openNav2()">Time Controls</button>
+	            <button class="Ropenbtn" id="Ropenbtn" onclick="openNav2()">Sim Controls</button>
 	            <div id="mySidebar2" class="Rsidebar">
 	              <a href="javascript:void(0)" class="closebtn" onclick="closeNav2()" title="close">&minus;</a>
 	              <div class="slidecontainer">
@@ -148,10 +148,11 @@
 	              <form class="btn_group" action="javascipt:void(0)">
 	                 <button type="button" class="action_btn reset" onclick="openForm()">Reset</button>
 	                 <button type="button" class="action_btn compare" onclick="openForm2()">Compare</button>
-                     
+                   <br>
+                     <button type="button" id="pretty_button" style="height: 45px" class="action_btn">Pretty Mode</button>
+                    <button type="button" id="grid_button" style="height: 45px" class="action_btn">Toggle Grid</button>
 	              </form>
-                  <button type="button" id="pretty_button" style="height: 40px" class="action_btn">Pretty Mode</button>
-                 <button type="button" id="grid_button" style="height: 40px" class="action_btn">Toggle Grid</button>
+                  
 	            </div>
 	        </div>
     <!--Context Menu (Hidden by default)-->
