--- a/Frontend/public/views/index.css
+++ b/Frontend/public/views/index.css
@@ -206,7 +206,7 @@ input.readonly {
   font-family: Helvetica, Arial, sans-serif;
   color: white;
   text-align: center;
-  z-index: 2;
+  z-index: 1;
 }
 
 .left-time {
@@ -301,6 +301,7 @@ input.readonly {
 /* Position and style the close button (top right corner) */
 .sidebar .closebtn {
   position: relative;
+  z-index: 1;
   top: -0.3em;
   font-size: 2.3em;
   float: right;
@@ -657,8 +658,9 @@ button {
 }
 
 .info_panel {
+  font-family: Helvetica, Arial, sans-serif;
   width: 227px;
-  height: 300px;
+  height: 350px;
   position: fixed;
   background-color: lightgray;
   top: calc(50% - 100px);
