--- a/Frontend/public/views/style/welcome.css
+++ b/Frontend/public/views/style/welcome.css
@@ -56,11 +56,12 @@ body {
 .aether{
   font-family: "Nasalization";
   font-size: 80px;
-  position: absolute;
+  position: relative;
   color: red;
   opacity: 1;
   top: 28%;
-  left: 36%;
+  /*left: 36%;*/
+  text-align: center;
   transition: all 1s ease 2s;
 }
 
