--- a/frontend/public/views/welcome.html
+++ b/frontend/public/views/welcome.html
@@ -5,11 +5,11 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Welcome</title>
         <link rel="stylesheet" type="text/css" href="/views/style/welcome.css">
-        <link rel="shortcut icon" type="image/png" href="assets/favicon-96x96.png"/>
+        <link rel="shortcut icon" type="image/png" href="/views/assets/favicon-96x96.png"/>
     </head>
     <body>
         <div class="welcome-section content-hidden">
-          <p class='aether'> AETHER </p>
+          <img class="aether" src="/views/assets/Aether.png" alt="Aether">
             <div class="content-wrap">
                 <ul class="fly-in-text">
                     <li>N</li>
